Reduced sidebar width and fixed button location
The floor buttons were partly off screen on kiosk, sidebar overlapping
some floors.

--- a/kiosk/CSS/styles.css
+++ b/kiosk/CSS/styles.css
@@ -150,7 +150,7 @@ ul#nav li.last, ul#nav li.last ul {
 	font-size: 30px;
 	width: 1920px;
 	position: absolute;
-	bottom: 5px;
+	bottom: 35px;
 }
 
 #floors a {
@@ -393,7 +393,7 @@ ul#nav li.last, ul#nav li.last ul {
 /* GENERAL SIDEBAR STYLING */
 
 .sidebar {
-	width: 400px;
+	width: 375px;
 	height: 100%;
 	position: absolute;
 	top: 0;
